--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <header class="container"> <!-- para todo  container-fluid-->
 	<h1 class="text-center text-primary" >MI PAGINA</h1> <!-- prymari color azul-->
-	<h1 class="text-center text-danger" > TIENDA ONLINE Y GESTOR DE STOCK DE HENRY PACHECO</h1> <!-- danger color rojo-->
+	<h1 class="text-center text-danger" > TIENDA ONLINE Y GESTOR DE STOCK DE HENRY PACHECO PARA CELULAR</h1> <!-- danger color rojo-->
 </header>
 <section class="container text-justify"><!-- container text-justify al medio y ajustado-->
 <p>
